# bertopic-congresso

./: .gitignore  README.md  pyproject.toml  run_evaluation.py  run_training.py
bertopic_congresso/training/: __init__.py  evaluator.py  trainer.py
bertopic_congresso/utils/: __init__.py  embeddings.py  loader.py
bertopic_congresso/utils/constants/: __init__.py  paths.py
