[tool.poetry]
name = "bertopic_congresso"
version = "0.1.0"
description = "Modelagem de tópicos em discursos de parlamentares no Congresso Nacional usando BERTopic."
license = "LGPL-3.0-or-later"
authors = ["Matheus Alves <matheusalves@copin.ufcg.edu.br>"]
repository = "https://github.com/beabaparlamentar/congresso-utils"
keywords = ["congresso-nacional", "parlamentares", "bertopic", "modelagem-topicos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
bertopic = "^0.14.1"
hdbscan = "^0.8.29"
nltk = "^3.8.1"
numpy = "^1.24.3"
octis = "^1.11.1"
pandas = "1.5.3"
sentence-transformers = "^2.2.2"
spacy = "^3.5.2"
umap-learn = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
